--- a/style.css
+++ b/style.css
@@ -1,25 +1,70 @@
-html, body {
-  margin: 0;
+/*body {
+    background: #6c373f;
+    display: flex;
+    justify-content: center;
+    }
+  
+  #alice-container {
+    width: 90vh;
+    display: grid;
+    place-items: center;
+    grid-template-areas:
+      "a1 . ."
+      ". a2 ."
+      ". . a3";
+  }
+  
+  #alice1 {
+    grid-area: a1;
+  }
+  
+  #alice2 {
+    grid-area: a2;
+  }
+  
+  #alice3 {
+    grid-area: a3;
+  }*/
+
+  body {
+    background: #6c373f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
-html {
-  font-family: sans-serif;
-  height: 100%;
+#alice-container {
+    width: 90vh;
+    display: grid;
+    place-items: center;
+    grid-template-areas:
+      "a1 . ."
+      ". a2 ."
+      ". . a3";
+    gap: 10px;
 }
 
-body {
-  overflow: hidden;
-  height: inherit;
+.alice-item {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transition: background-color 0.5s ease-in-out;
 }
 
-h1 {
-  font-size: 2rem;
-  letter-spacing: -1px;
-  position: absolute;
-  margin: 0;
-  top: -4px;
-  right: 5px;
-
-  color: transparent;
-  text-shadow: 0 0 4px white;
+#alice1 {
+    grid-area: a1;
+    background-color: #FF6347; /* Tomato */
 }
+
+#alice2 {
+    grid-area: a2;
+    background-color: #ADD8E6; /* Light Blue */
+}
+
+#alice3 {
+    grid-area: a3;
+    background-color: #FFFFE0; /* Light Yellow */
+}
+  
